2011-03-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=55721
        Global IconDatabase should be returned by reference, not as a pointer

        * Api/qwebsettings.cpp:
        (QWebSettings::setIconDatabasePath):
        (QWebSettings::iconDatabasePath):
        (QWebSettings::clearIconDatabase):
        (QWebSettings::iconForUrl):

2011-03-03  Alexey Proskuryakov  <ap@apple.com>

        Removing an include of WebCoreKeyboardUIMode.h that Ive just added. It's already included
        via ChromeClient.h

        * WebCoreSupport/ChromeClientQt.h:

2011-03-02  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (WebKit2): Tab keys no longer observe Full Keyboard Access
        https://bugs.webkit.org/show_bug.cgi?id=55633
        <rdar://problem/8963023>

        * WebCoreSupport/ChromeClientQt.cpp (WebCore::ChromeClientQt::keyboardUIMode):
        * WebCoreSupport/ChromeClientQt.h:
        Implement keyboardUIMode() instead of tabsToLinks(). No change in functionality, since
        this platform doesn't observe or have full keyboard access state.

2011-03-03  Alexis Menard  <alexis.menard@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] QGraphicsWebView should use updateMicroFocus() of QGraphicsItem
        https://bugs.webkit.org/show_bug.cgi?id=55568

        We should use updateMicroFocus() from QGraphicsItem rather than the implementation
        in QGraphicsWebView. _q_updateMicroFocus was added when QGraphicsItem didn't have the feature.
        In Qt 4.7, updateMicroFocus was added, let's use it, then we can benefit of all bug fixing done
        in QGraphicsItem.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::setPage):
        * Api/qgraphicswebview.h:

2011-03-03  Peter Kasting  <pkasting@google.com>

        Reviewed by James Robinson.
